# ParComp

exscan-student-1.0.0-Source/: CMakeLists.txt
exscan-student-1.0.0-Source/src/: exscan.c  exscan.h  exscan_tester.c
parmerge-student-1.0.0-Source/: .bash_history  CMakeLists.txt
parmerge-student-1.0.0-Source/docker/: Dockerfile
parmerge-student-1.0.0-Source/src/: merge1.c
